--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,10 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+     <sonar.host.url>http://18.138.81.149:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>passw0rd</sonar.password> 	    
+	     </dependency>
   </dependencies>
   <build>
 <finalName>${project.artifactId}##${project.version}</finalName>  
